--- a/rds.html
+++ b/rds.html
@@ -230,6 +230,22 @@
 
                             </p>
                     </div>
+
+		    <div class="box alt" style="display: flex; justify-content: center; align-items: center; gap: 40px; margin: 40px 0;">
+  		    <!-- Image -->
+			  <img src="images/rds/mechanical/thumb_waggle.png"
+			       alt="Haptic thumb mechanism"
+			       class="gallery-item"
+			       data-description="Haptic thumb mechanism"
+			       style="height: 300px; width: auto; object-fit: contain;" />
+			
+			  <!-- Video -->
+			  <video controls autoplay loop muted playsinline
+			         style="height: 300px; width: auto;">
+			    <source src="images/rds/mechanical/ezgif-41bb301cbff916.mp4" type="video/mp4">
+			    Your browser does not support the video tag.
+			  </video>
+			</div>
 		    
 		    <div>
                         <h2>Cable Routing</h2>
