--- a/rds.html
+++ b/rds.html
@@ -269,6 +269,14 @@
                             </p>
                     </div>
 
+		    <div style="text-align: center; margin: 40px 0;">
+			  <img src="images/rds/mechanical/ht1.png"
+			       alt="Haptic thumb mechanism"
+			       class="gallery-item"
+			       style="height: 300px; width: auto; object-fit: contain;" />
+			  <p class="caption">Haptic Thumb Mechanism</p>
+			</div>
+
 		    <div>
                         <h2>CAD Model</h2>
                             <p> 
