--- a/rds.html
+++ b/rds.html
@@ -190,7 +190,7 @@
     			<div class="col-4">
 				<span class="image fit">
                                    <img src="images/rds/mechanical/Screenshot 2024-02-16 at 12.04.32 PM.png" alt="" class="gallery-item" data-description="system overview" />
-                                   <p class="caption">System Overview</p>
+                                   <p class="caption">Mechanical System Block Diagram</p>
                                </span>
                            </div>
 				 
@@ -212,7 +212,7 @@
 				a comfortable workspace for the user’s thumb.  Given this constraint, we broke down the thumb motion into two principal functional motions that we defined 
 				ourselves: CMC planar rotation ‘waggling’ of the thumb and MCP/IP 'curling'.  These two degrees of freedom make up two subsystems of our design as well as 
 				a third subsystem consisting of the thimble holster interface to the user’s thumb. The MCP/IP subsystem and the thimble subsystem each contain an unactuated 
-				passive degrees of freedom to provide greater comfort to the user during our curl motion. The mechanical system block diagram below depicts the subsystems and 
+				passive degrees of freedom to provide greater comfort to the user during our curl motion. The mechanical system block diagram above depicts the subsystems and 
 				their major components and the decomposed motions are also depicted in the figure below
 
                             </p>
