--- a/rds.html
+++ b/rds.html
@@ -273,11 +273,11 @@
                     </div>
 
 		    <div style="text-align: center; margin: 40px 0;">
-			  <img src="images/rds/mechanical/cable_routing.png"
+			  <img src="images/rds/mechanical/cable_routing.jpg"
 			       alt="Haptic thumb mechanism"
 			       class="gallery-item"
 			       style="height: 300px; width: auto; object-fit: contain;" />
-			  <p class="caption">Haptic Thumb Mechanism</p>
+			  <p class="caption">Cable Routing</p>
 			</div>
 
 		    <div>
