--- a/rds.html
+++ b/rds.html
@@ -250,12 +250,16 @@
                     </div>
 
 		    <div style="text-align: center; margin: 40px 0;">
-			  <img src="images/rds/mechanical/cable_routing.jpg"
-			       alt="Haptic thumb mechanism"
-			       class="gallery-item"
-			       style="height: 450px; width: auto; object-fit: contain;" />
+			 <img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
 			  <p class="caption">Cable Routing</p>
 			</div>
+
+		    <div class="col-4">
+                               <span class="image fit">
+                                   <img src="images/rds/mechanical/rfinger.png" alt="" class="gallery-item" data-description="Model of Robot Finger" />
+                                   <p class="caption">Robot Finger</p>
+                               </span>
+                           </div>
 
 		    <div>
                         <h2>CAD Model</h2>
