--- a/rds.html
+++ b/rds.html
@@ -264,7 +264,7 @@
 		    <div>
                         <h2>CAD Model</h2>
                             <p> 
-                                The full CAD model of the haptic thumb system is shown above.  The motors and connection points between the different subsystems are outlined.  The CMC Side Plates provide
+                                The full CAD model of the haptic thumb system is shown below  The motors and connection points between the different subsystems are outlined.  The CMC Side Plates provide
 				a mounting point for the haptic thumb system to connect to the rest of the haptic system.  The MCP Side Plates are attached to the CMC Plate to connect the CMC and MCP/IP 
 				systems together. The Phalanx Proximal Plates connect to the compliant Phalanx Distal Plate to connect the Thimble system to the rest of the haptic system.  The Inner and
 				Outer Thimble connect the user to the haptic system.  Different views of the subsystems are shown below to highlight the different parts and features. <br>
