--- a/rds.html
+++ b/rds.html
@@ -249,17 +249,13 @@
                             </p>
                     </div>
 
-		    <div style="text-align: center; margin: 40px 0;">
+		    <div class="box alt">
+		    <div style="text-align: center; margin: 300px 0;">
 			 <img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
 			  <p class="caption">Cable Routing</p>
 			</div>
+		    </div>
 
-		    <div class="col-4">
-                               <span class="image fit">
-                                   <img src="images/rds/mechanical/rfinger.png" alt="" class="gallery-item" data-description="Model of Robot Finger" />
-                                   <p class="caption">Robot Finger</p>
-                               </span>
-                           </div>
 
 		    <div>
                         <h2>CAD Model</h2>
