--- a/rds.html
+++ b/rds.html
@@ -249,12 +249,24 @@
                             </p>
                     </div>
 
-		    <div class="box alt">
+		<div class="box alt">
+  		<!-- Image and caption in left column -->
+ 			 <div class="row gtr-50 gtr-uniform">
+    				<div class="col-4">
+     				 <span class="image fit">
+        				<img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
+        				<p class="caption">Cable Routing</p>
+     				 </span>
+    				</div>
+			 </div>
+		</div>
+
+<!-- 		    <div class="box alt">
 		    <div style="text-align: center; margin: 300px 0;">
 			 <img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
 			  <p class="caption">Cable Routing</p>
 			</div>
-		    </div>
+		    </div> -->
 
 
 		    <div>
