--- a/rds.html
+++ b/rds.html
@@ -262,7 +262,7 @@
 		    
 <!-- 		<div class="box alt">
   		<!-- Image and caption in left column -->
- 			 <div class="row gtr-50 gtr-uniform">
+<!--  			 <div class="row gtr-50 gtr-uniform">
     				<div class="col-4">
      				 <span class="image fit">
         				<img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
@@ -270,7 +270,7 @@
      				 </span>
     				</div>
 			 </div>
-		</div> -->
+		</div> --> -->
 
 <!-- 		    <div class="box alt">
 		    <div style="text-align: center; margin: 300px 0;">
