--- a/rds.html
+++ b/rds.html
@@ -249,20 +249,11 @@
                             </p>
                     </div>
 
-		<div class="box alt" style="display: flex; justify-content: center; align-items: center; margin: 40px 0;">
-		  <div style="text-align: center;">
-		    <img src="images/rds/mechanical/cable_routing.jpg"
-		         alt="Cable routing"
-		         class="gallery-item"
-		         data-description="Cable routing"
-		         style="height: 300px; width: auto; object-fit: contain;" />
-		    <p class="caption">Cable Routing</p>
-		  </div>
-		</div>
+
 		    
-<!-- 		<div class="box alt">
+	<div class="box alt">
   		<!-- Image and caption in left column -->
-<!--  			 <div class="row gtr-50 gtr-uniform">
+			 <div class="row gtr-50 gtr-uniform">
     				<div class="col-4">
      				 <span class="image fit">
         				<img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
@@ -270,7 +261,7 @@
      				 </span>
     				</div>
 			 </div>
-		</div> --> -->
+		</div> 
 
 <!-- 		    <div class="box alt">
 		    <div style="text-align: center; margin: 300px 0;">
