--- a/rds.html
+++ b/rds.html
@@ -249,10 +249,21 @@
                             </p>
                     </div>
 
-
-		    
-	<div class="box alt">
-  		<!-- Image and caption in left column -->
+		<div class="box alt">
+		  <!-- Image and caption centered -->
+		  <div style="text-align: center;">
+		    <div class="row gtr-50 gtr-uniform">
+		      <div class="col-4" style="margin: 0 auto;">
+		        <span class="image fit">
+		          <img src="images/rds/mechanical/cable_routing.jpg" alt="" class="gallery-item" data-description="cable routing" />
+		          <p class="caption">Cable Routing</p>
+		        </span>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+				    
+<!-- 	<div class="box alt">
 			 <div class="row gtr-50 gtr-uniform">
     				<div class="col-4">
      				 <span class="image fit">
@@ -261,7 +272,7 @@
      				 </span>
     				</div>
 			 </div>
-		</div> 
+		</div>  -->
 
 <!-- 		    <div class="box alt">
 		    <div style="text-align: center; margin: 300px 0;">
