--- a/rds.html
+++ b/rds.html
@@ -301,7 +301,7 @@
 		    <div>
                         <h2>CMC Subsystem</h2>
                             <p> 
-                                The CMC subsystem is depicted above, with joint limits set at 0° and 70° by a spacer separating the top and bottom plates. This subsystem utilizes a ~5:1 cable drive 
+                                The CMC subsystem is depicted below, with joint limits set at 0° and 70° by a spacer separating the top and bottom plates. This subsystem utilizes a ~5:1 cable drive 
 				transmission ratio, determined by the radii of the CMC plate and CMC motor pulley. <br>
 
 				The assembly process begins with the top plate sub-assembly, which includes the CMC top plate, ECX 22 XL motors, 2-piece collar shafts, and motor pulleys. These components 
@@ -319,7 +319,7 @@
 		    <div>
                         <h2>MCP/IP Subsystem</h2>
                             <p> 
-                                The components of the MCP/IP subsystem are depicted above. The active MCP joint is driven at a 3.5:1 transmission ratio due to the diameter of the MCP pulley and two sets of 
+                                The components of the MCP/IP subsystem are depicted below The active MCP joint is driven at a 3.5:1 transmission ratio due to the diameter of the MCP pulley and two sets of 
 				spacers contact the edge of the MCP side plates to create the mechanical joint limits providing 77 degrees of rotational motion. The MCP pulley is clearance fit on the MCP 
 				shaft and loctite was used to constrain the pulley rotation to the shaft rotation. As a result, the pulley as well as all of the proximal phalanx plates rotate together. 
 				This subsystem can be assembled separately from the CMC subsystem and attached at a later time, meaning that the CMC joint does not need to be re-tensioned if repairs or 
