--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									<h3><a href="rds.html">Argonne National Laboratory, Northwestern University</a></h3>
 									<p class="center-date"><a href="rds.html">January 2024 - June 2024</a></p>
 								</header>
-								<a href="rds.html" class="image main"><img src="images/rds/mechanical/haptic.jpg" alt="" /></a>
+								<a href="rds.html" class="image main"><img src="images/rds/mechanical/ht1.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="rds.html" class="button large">Discover More</a></li>
 								</ul>
