--- a/rds.html
+++ b/rds.html
@@ -297,6 +297,20 @@
 
                             </p>
                     </div>
+
+		<div class="box alt">
+		  <!-- Image and caption centered -->
+		  <div style="text-align: center;">
+		    <div class="row gtr-50 gtr-uniform">
+		      <div class="col-4" style="margin: 0 auto;">
+		        <span class="image fit">
+		          <img src="images/rds/mechanical/cad_model.jpg" alt="" class="gallery-item" data-description="haptic thumb CAD" />
+		          <p class="caption">Haptic Thumb CAD Model</p>
+		        </span>
+		      </div>
+		    </div>
+		  </div>
+		</div>
 		    
 		    <div>
                         <h2>CMC Subsystem</h2>
