--- a/rds.html
+++ b/rds.html
@@ -262,6 +262,18 @@
 		    </div>
 		  </div>
 		</div>
+
+		<div class="box alt" style="display: flex; justify-content: center; gap: 40px; margin: 40px 0;">
+		  <video controls autoplay loop muted playsinline style="height: 300px; width: auto;">
+		    <source src="images/rds/mechanical/IMG_6928.mp4" type="video/mp4">
+		    Your browser does not support the video tag.
+		  </video>
+		
+		  <video controls autoplay loop muted playsinline style="height: 300px; width: auto;">
+		    <source src="images/rds/mechanical/IMG_6931.mp4" type="video/mp4">
+		    Your browser does not support the video tag.
+		  </video>
+		</div>
 				    
 <!-- 	<div class="box alt">
 			 <div class="row gtr-50 gtr-uniform">
