--- a/rds.html
+++ b/rds.html
@@ -316,7 +316,7 @@
 		    <div class="row gtr-50 gtr-uniform">
 		      <div class="col-4" style="margin: 0 auto;">
 		        <span class="image fit">
-		          <img src="images/rds/mechanical/cad_model.jpg" alt="" class="gallery-item" data-description="haptic thumb CAD" />
+		          <img src="images/rds/mechanical/cad_model.png" alt="" class="gallery-item" data-description="haptic thumb CAD" />
 		          <p class="caption">Haptic Thumb CAD Model</p>
 		        </span>
 		      </div>
