--- a/rds.html
+++ b/rds.html
@@ -822,7 +822,7 @@
                 
                 <hr />
                 <div>
-                    <h2 style="text-align: center; font-size: 2.5rem;"><u>Mechanical System</u></h2>
+                    <h2 style="text-align: center; font-size: 2.5rem;"><u>Mechanical System Overview</u></h2>
                     
                     <h2>Robot Finger</h2>
                     <div style="text-align: center;">
