--- a/rds.html
+++ b/rds.html
@@ -596,7 +596,7 @@
                 </div>
 
 				<div>
-		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mehcanical System: Haptic Thumb</u></h2>
+		<h2 style="text-align: center; font-size: 2.5rem; " ><u>Mechanical System: Haptic Thumb</u></h2>
 		</div>
 
 		<div class="box alt">
